--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.vinicreis</groupId>
-    <artifactId>zookepeer-java</artifactId>
+    <artifactId>zookeeper-java</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
